--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,14 @@ pvlib~=0.10.1
 pandas~=2.1.1
 matplotlib~=3.8.0
 requests~=2.31.0
-dash~=2.13.0
+dash~=2.14.0
 plotly~=5.17.0
 joblib~=1.3.2
 pydeck~=0.8.0
-numpy~=1.25.2
-scipy~=1.9.3
+numpy~=1.26.0
+scipy~=1.11.3
 Pillow~=10.0.1
 diskcache~=5.6.3
 celery~=5.3.4
 dash-bootstrap-components~=1.5.0
+dacite~=1.8.1
